<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditInventoryActivity">

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:hint="@string/item_name"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addEditTitle" />

    <TextView
        android:id="@+id/addEditTitle"
        android:layout_width="242dp"
        android:layout_height="49dp"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onAddItemClicked"
        android:padding="12dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etSKU"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/sku"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etItemName" />

    <EditText
        android:id="@+id/etItemQty"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:hint="@string/qty"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSKU" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etItemQty" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDesc" />

    <Spinner
        android:id="@+id/spinnerSupplier"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewCategory" />

    <EditText
        android:id="@+id/etNewCategory"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_category"
        app:layout_constraintEnd_toStartOf="@id/btnAddCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:onClick="onAddCategoryClicked"
        android:text="@string/add_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinnerCategory"
        app:layout_constraintBaseline_toBaselineOf="@id/spinnerCategory"/>

    <EditText
        android:id="@+id/etNewSupplier"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_supplier"
        app:layout_constraintEnd_toStartOf="@id/btnAddSupplier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerSupplier" />

    <EditText
        android:id="@+id/etSupplierContact"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/supplier_contact"
        app:layout_constraintEnd_toStartOf="@id/btnAddSupplier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewSupplier" />

    <Button
        android:id="@+id/btnAddSupplier"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_supplier"
        android:onClick="onAddSupplierClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinnerSupplier"
        app:layout_constraintBaseline_toBaselineOf="@id/spinnerSupplier" />


</androidx.constraintlayout.widget.ConstraintLayout>