<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F8"
    android:padding="24dp"
    tools:context=".InventoryActivity">


    <TextView
        android:id="@+id/tvGridTitle"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/inventory"
        android:textAlignment="textStart"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="onAddItemClicked"
        android:padding="12dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGridTitle" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/logout"
        android:onClick="onLogoutClicked"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerFilterCategory"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogout" />

</androidx.constraintlayout.widget.ConstraintLayout>